--- a/test.yaml
+++ b/test.yaml
@@ -5,4 +5,4 @@ sources:
   example:
     remote: 'https://github.com/xorpaul/g10k-environment.git'
     basedir: '/tmp/example/'
-    prefix: true
+    prefix: false
