add modifiedenvs and modifieddirs variables to postrun command, fixes #112 and extends #111

--- a/tests/TestConfigPostrunCommandDirs.yaml
+++ b/tests/TestConfigPostrunCommandDirs.yaml
@@ -7,4 +7,4 @@ sources:
     basedir: '/tmp/example/'
     prefix: true
 
-postrun: ['tests/postrun.sh', '$modifiedenvs']
+postrun: ['tests/postrun.sh', '$modifieddirs']
