add support for deploy setting hash

--- a/tests/TestConfigDeploy.yaml
+++ b/tests/TestConfigDeploy.yaml
@@ -1,7 +1,10 @@
 ---
 :cachedir: '/tmp/g10k'
+
 deploy:
-  purge_levels: ['environment']
+  purge_levels: ['deployment']
+  purge_whitelist: [ 'custom.json', '**/*.xpp' ]
+  deployment_purge_whitelist: ['full_hiera_*']
 
 sources:
   full:
