--- a/tests/TestConfigExamplePurgeAllLevels.yaml
+++ b/tests/TestConfigExamplePurgeAllLevels.yaml
@@ -1,7 +1,8 @@
 ---
 :cachedir: '/tmp/g10k'
-purge_levels: ['deployment', 'puppetfile', 'environment']
-purge_whitelist: [ '.latest_revision', '.resource_types' ]
+deploy:
+  purge_levels: ['deployment', 'puppetfile', 'environment']
+  purge_whitelist: [ '.latest_revision', '.resource_types' ]
 
 sources:
   example:
