--- a/tests/TestConfigExamplePurgeEnvironmentRecursive.yaml
+++ b/tests/TestConfigExamplePurgeEnvironmentRecursive.yaml
@@ -1,7 +1,7 @@
 ---
 :cachedir: '/tmp/g10k'
 purge_levels: ['environment']
-purge_whitelist: [ '.latest_revision', '.resource_types', '.resource_types/*.pp' ]
+purge_whitelist: [ '.latest_revision', '.resource_types', '**/*.pp' ]
 
 sources:
   example:
