fix plain git remote address

--- a/tests/TestConfigExitIfUnreachableFalse.yaml
+++ b/tests/TestConfigExitIfUnreachableFalse.yaml
@@ -3,6 +3,6 @@
 
 sources:
   example:
-    remote: 'git://github.com/xorpaul/g10k-environment-unavailable.git'
+    remote: 'https://github.com/xorpaul/g10k-environment-unavailable.git'
     basedir: '/tmp/example/'
     exit_if_unreachable: false
