--- a/tests/TestConfigRetryGitCommands.yaml
+++ b/tests/TestConfigRetryGitCommands.yaml
@@ -4,5 +4,5 @@ retry_git_commands: true
 
 sources:
   example:
-    remote: 'git://github.com/xorpaul/g10k-environment.git'
+    remote: 'https://github.com/xorpaul/g10k-environment.git'
     basedir: '/tmp/example/'
