use git@github with SSH as non-existing repositories with https always result in a prompt for username and password

--- a/tests/TestConfigExitIfUnreachableFalse.yaml
+++ b/tests/TestConfigExitIfUnreachableFalse.yaml
@@ -3,6 +3,6 @@
 
 sources:
   example:
-    remote: 'https://github.com/xorpaul/g10k-environment-unavailable.git'
+    remote: 'git@github.com:xorpaul/g10k-environment-intentionally-unavailable.git'
     basedir: '/tmp/example/'
     exit_if_unreachable: false
