--- a/tests/TestConfigPuppetfilePrecedence.yaml
+++ b/tests/TestConfigPuppetfilePrecedence.yaml
@@ -1,9 +1,9 @@
 ---
 :cachedir: '/tmp/g10k'
-forge_cache_ttl: 24h
+forge_base_url: 'https://fake-forge.domain.tld'
+forge_cache_ttl: 100h
 
 sources:
   example:
     remote: 'https://github.com/xorpaul/g10k-environment.git'
     basedir: '/tmp/example/'
-    prefix: foobar
