--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go_version: '>=1.19.3'
+        go_version: '1.19.3'
         os: [ubuntu-latest, macOS-latest]
       # Do not fail on all OS versions if one fail
       fail-fast: false
