--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go_version: '1.19.3'
         os: [ubuntu-latest, macOS-latest]
       # Do not fail on all OS versions if one fail
       fail-fast: false
@@ -22,10 +21,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - name: setup go environment ${{ matrix.go_version }}
+      - name: setup go environment 1.19.3
         uses: actions/setup-go@v3
         with:
-          go-version: ${{ matrix.go_version }}
+          go-version: '1.19.3'
       # Installs dependendencies for testing
       - name: Install additional Packages on ${{ matrix.os }}
         run: |
