--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       - name: setup go environment 1.19.3
         uses: actions/setup-go@v3
         with:
-          go-version: '1.19.3'
+          go-version: 'stable'
       # Installs dependendencies for testing
       - name: Install additional Packages on ${{ matrix.os }}
         run: |
