--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - name: setup go environment 1.19.3
+      - name: setup go environment stable
         uses: actions/setup-go@v3
         with:
           go-version: 'stable'
