--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       - name: setup go environment stable
         uses: actions/setup-go@v3
         with:
-          go-version: 'stable'
+          go-version: '1.22.0'
       # Installs dependendencies for testing
       - name: Install additional Packages on ${{ matrix.os }}
         run: |
